--- a/hw2/package.json
+++ b/hw2/package.json
@@ -4,7 +4,8 @@
   "main": "src/settings.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   },
   "scripts": {
     "watch": "tsc -w",
