--- a/hw3/.env
+++ b/hw3/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://MyFirstDB:1111@cluster0.17u0hlx.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://MyFirstDB:1111@cluster0.17u0hlx.mongodb.net/test1?retryWrites=true&w=majority
 SECRET_KEY=2456
