--- a/hw5/package.json
+++ b/hw5/package.json
@@ -4,6 +4,8 @@
   "main": "src/settings.ts",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongodb": "^6.0.0"
