--- a/hw6/package.json
+++ b/hw6/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.4",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0"
   },
   "scripts": {
