--- a/hw6/tsconfig.json
+++ b/hw6/tsconfig.json
@@ -11,5 +11,6 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts"],
+  "files": ["index.d.ts"],
 }
