--- a/hw6/tsconfig.json
+++ b/hw6/tsconfig.json
@@ -12,5 +12,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"],
-  "files": ["index.d.ts"],
+  "files": ["./src/types/index.d.ts"],
 }
