--- a/hw7/package.json
+++ b/hw7/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/nodemailer": "^6.4.13",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
