--- a/hw7/package.json
+++ b/hw7/package.json
@@ -12,7 +12,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "watch": "tsc -w",
