--- a/hw7/package.json
+++ b/hw7/package.json
@@ -8,6 +8,7 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/nodemailer": "^6.4.13",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
