--- a/hw7/package.json
+++ b/hw7/package.json
@@ -5,20 +5,26 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/nodemailer": "^6.4.13",
+    "@types/supertest": "^2.0.16",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "nodemailer": "^6.9.7",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "uuid": "^9.0.1"
   },
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon --inspect dist/index.js"
+    "dev": "nodemon --inspect dist/index.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
