--- a/hw8/package.json
+++ b/hw8/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hw2",
   "version": "1.0.0",
-  "main": "src/settings.ts",
+  "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -10,6 +10,7 @@
     "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.16",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -27,6 +28,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
     "dotenv": "^16.3.1",
