--- a/13_hw_nest/package.json
+++ b/13_hw_nest/package.json
@@ -21,9 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "dotenv-typed": "^1.1.1",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
