--- a/14_hw_nest/package.json
+++ b/14_hw_nest/package.json
@@ -25,10 +25,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "dotenv-typed": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
