--- a/14_hw_nest/package.json
+++ b/14_hw_nest/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "dotenv-typed": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
+    "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
