hw14 nest emeilConfirmation

--- a/14_hw_nest/package.json
+++ b/14_hw_nest/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "bson": "^6.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "dotenv-typed": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
