--- a/14_hw_nest/package.json
+++ b/14_hw_nest/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^8.2.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -54,6 +55,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/passport": "^0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
