--- a/14_hw_nest/package.json
+++ b/14_hw_nest/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "start:serveo": "ssh -R 80:localhost:3000 nokey@localhost.run",
+    "start:dev:serveo": "concurrently \"nest start --watch\" \"ssh -R 80:localhost:3000 serveo.net\""
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -34,6 +36,7 @@
     "bson": "^6.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
     "dev": "^0.1.3",
     "dotenv": "^16.4.5",
