--- a/15_hw_nest_cqrs_finish/package.json
+++ b/15_hw_nest_cqrs_finish/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.1.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bson": "^6.6.0",
