--- a/16_hw_nest/package.json
+++ b/16_hw_nest/package.json
@@ -25,19 +25,21 @@
     "-": "^0.0.1",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.1",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.1.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bson": "^6.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
     "dev": "^0.1.3",
     "dotenv": "^16.4.5",
@@ -55,6 +57,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
