--- a/23_hw_nest_typeORM/package.json
+++ b/23_hw_nest_typeORM/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config jest-e2e.json --runInBand ",
     "start:serveo": "ssh -R 80:localhost:3000 nokey@localhost.run",
     "start:dev:serveo": "concurrently \"nest start --watch\" \"ssh -R 80:localhost:3000 serveo.net\""
   },
@@ -85,22 +85,6 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "test",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
+
   "packageManager": "yarn@4.1.0"
 }
