--- a/24_hw_nest_typeORM/package.json
+++ b/24_hw_nest_typeORM/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config jest-e2e.json --runInBand ",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand ",
     "start:serveo": "ssh -R 80:localhost:3000 nokey@localhost.run",
     "start:dev:serveo": "concurrently \"nest start --watch\" \"ssh -R 80:localhost:3000 serveo.net\""
   },
@@ -45,6 +45,8 @@
     "dev": "^0.1.3",
     "dotenv": "^16.4.5",
     "dotenv-typed": "^1.1.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "nodemailer": "^6.9.13",
@@ -69,7 +71,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
@@ -85,6 +87,22 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
-
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "test",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
   "packageManager": "yarn@4.1.0"
 }
