--- a/24_hw_nest_typeORM/package.json
+++ b/24_hw_nest_typeORM/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcrypt": "^5.0.2",
