--- a/24_hw_nest_typeORM/package.json
+++ b/24_hw_nest_typeORM/package.json
@@ -8,16 +8,16 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "cross-env ENV=PRODACTION nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "cross-env ENV=TEST nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand ",
+    "test:e2e": "cross-env ENV=TEST jest --config ./test/jest-e2e.json --runInBand ",
     "start:serveo": "ssh -R 80:localhost:3000 nokey@localhost.run",
     "start:dev:serveo": "concurrently \"nest start --watch\" \"ssh -R 80:localhost:3000 serveo.net\""
   },
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "dev": "^0.1.3",
     "dotenv": "^16.4.5",
